# verbose-eureka

./: LICENSE  README.md  pyproject.toml
snippets/: models.py  serializers.py  views.py
snippets/migrations/: 0001_initial.py
tutorial/: settings.py
